// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/devices/deviceCommands matches snapshot while interface cannot be found 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    farItems={
      Array [
        Object {
          "ariaLabel": "deviceCommands.command.close",
          "iconProps": Object {
            "iconName": "NavigateBack",
          },
          "key": "NavigateBack",
          "name": "deviceCommands.command.close",
          "onClick": [Function],
        },
      ]
    }
    items={
      Array [
        Object {
          "ariaLabel": "deviceCommands.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceCommands.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <Component
    component={[Function]}
  />
  <StyledLabelBase
    className="no-pnp-content"
  >
    deviceCommands.noCommands
  </StyledLabelBase>
</Fragment>
`;

exports[`components/devices/deviceCommands matches snapshot with a commandSchema 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    farItems={
      Array [
        Object {
          "ariaLabel": "deviceCommands.command.close",
          "iconProps": Object {
            "iconName": "NavigateBack",
          },
          "key": "NavigateBack",
          "name": "deviceCommands.command.close",
          "onClick": [Function],
        },
      ]
    }
    items={
      Array [
        Object {
          "ariaLabel": "deviceCommands.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceCommands.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <Component
    component={[Function]}
  />
  <Component
    commandSchemas={
      Array [
        Object {
          "commandModelDefinition": Object {
            "@type": "Command",
            "name": "command1",
          },
          "parsedSchema": Object {
            "description": "command1 description",
            "name": "command1",
          },
        },
      ]
    }
    componentName="foo"
    deviceId={null}
    invokeDigitalTwinInterfaceCommand={[MockFunction]}
    isLoading={false}
    refresh={[MockFunction]}
    setComponentName={
      [MockFunction] {
        "calls": Array [
          Array [
            "foo",
          ],
          Array [
            "foo",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  />
</Fragment>
`;
